# vpulse-editor

./: .gitignore  Cargo.toml
egui_node_graph2/src/: editor_ui.rs  graph.rs  node_finder.rs  traits.rs
src/: app.rs  bindings.rs  compat.rs  lib.rs  main.rs  pulsetypes.rs
src/app/: impls.rs  types.rs
src/compat/: format_v1.rs
