[package]
name = "pulseedit"
version = "0.3.4"
edition = "2021"
rust-version = "1.87"
build = "src/build.rs"

[lib]
name = "libpulseedit"
crate-type = ["rlib"]

[dependencies]
eframe = "0.32.1"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
image = "0.24.3"
slotmap = "1.0.7"
egui-file-dialog = "0.8.0"
rand = "0.8.5"
serde_json = "1.0.137"
egui_node_graph2 = { path = "egui_node_graph2"}
rfd = "0.15.2"
ron = "0.12.0"
self_update = { version = "0.42.0", features = ["archive-zip"], default-features = false }
open = "5.3.2"
smol = "2.0.2"
strum = "0.27.2"
strum_macros = "0.27.2"
delegate = "0.13.4"
keyvalues3 = "1.1.0"
serde_path_to_error = "0.1.20"
arboard = "3.6.1"

[build-dependencies]
embed-resource = "3.0.5"

[features]
default = ["persistence"]
persistence = ["egui_node_graph2/persistence", "eframe/persistence"]
nongame_asset_build = []

[profile.dev]
split-debuginfo = "packed"
